force-app/main/default/objects/Account/fields/Bank_Buy__c.field-meta.xml
<CustomField>
    <fullName>Bank_Buy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bank Buy</label>
    <type>Checkbox</type>
</CustomField>