force-app/main/default/objects/Account/fields/Bank_Sell__c.field-meta.xml
<CustomField>
    <fullName>Bank_Sell__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bank Sell</label>
    <type>Checkbox</type>
</CustomField>