force-app/main/default/objects/Account/fields/BankerAdded__c.field-meta.xml
<CustomField>
    <fullName>BankerAdded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Banker Added</label>
    <type>Checkbox</type>
</CustomField>