force-app/main/default/objects/Account/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Branch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yorkshire Bank</fullName>
            </value>
            <value>
                <fullName>Clydesdale Bank</fullName>
            </value>
            <value>
                <fullName>0</fullName>
                <isActive>false</isActive>
                <label>0</label>
            </value>
            <value>
                <fullName>ACT Dinner</fullName>
                <isActive>false</isActive>
                <label>ACT Dinner</label>
            </value>
            <value>
                <fullName>Advanced Manufacturing Forum</fullName>
                <isActive>false</isActive>
                <label>Advanced Manufacturing Forum</label>
            </value>
            <value>
                <fullName>Aleris Recycling (Swansea) Limited</fullName>
                <isActive>false</isActive>
                <label>Aleris Recycling (Swansea) Limited</label>
            </value>
            <value>
                <fullName>Andrew Price</fullName>
                <isActive>false</isActive>
                <label>Andrew Price</label>
            </value>
            <value>
                <fullName>Australia Bank Misc Contact</fullName>
                <isActive>false</isActive>
                <label>Australia Bank Misc Contact</label>
            </value>
            <value>
                <fullName>Australia Bank Misc Contacts</fullName>
                <isActive>false</isActive>
                <label>Australia Bank Misc Contacts</label>
            </value>
            <value>
                <fullName>Clyde Bergemann Materials Handling Ltd</fullName>
                <isActive>false</isActive>
                <label>Clyde Bergemann Materials Handling Ltd</label>
            </value>
            <value>
                <fullName>Clydesdale Bank Plc, Falkirk, Camelon</fullName>
                <isActive>false</isActive>
                <label>Clydesdale Bank Plc, Falkirk, Camelon</label>
            </value>
            <value>
                <fullName>EARTHMACH PTY LTD</fullName>
                <isActive>false</isActive>
                <label>EARTHMACH PTY LTD</label>
            </value>
            <value>
                <fullName>Edinburgh Chamber of Commerce - Networking</fullName>
                <isActive>false</isActive>
                <label>Edinburgh Chamber of Commerce - Networking</label>
            </value>
            <value>
                <fullName>KPMG - Edinburgh</fullName>
                <isActive>false</isActive>
                <label>KPMG - Edinburgh</label>
            </value>
            <value>
                <fullName>LAM 20101 Sydney CBD</fullName>
                <isActive>false</isActive>
                <label>LAM 20101 Sydney CBD</label>
            </value>
            <value>
                <fullName>LAM 20102 North Shore</fullName>
                <isActive>false</isActive>
                <label>LAM 20102 North Shore</label>
            </value>
            <value>
                <fullName>LAM 20104 Hills</fullName>
                <isActive>false</isActive>
                <label>LAM 20104 Hills</label>
            </value>
            <value>
                <fullName>LAM 20806 Greater Southern</fullName>
                <isActive>false</isActive>
                <label>LAM 20806 Greater Southern</label>
            </value>
            <value>
                <fullName>LAM 20808 ACT</fullName>
                <isActive>false</isActive>
                <label>LAM 20808 ACT</label>
            </value>
            <value>
                <fullName>LAM 30107 Eastern Suburbs</fullName>
                <isActive>false</isActive>
                <label>LAM 30107 Eastern Suburbs</label>
            </value>
            <value>
                <fullName>LAM 30110 Bayside</fullName>
                <isActive>false</isActive>
                <label>LAM 30110 Bayside</label>
            </value>
            <value>
                <fullName>LAM 30116 MELBOURNE CBD</fullName>
                <isActive>false</isActive>
                <label>LAM 30116 MELBOURNE CBD</label>
            </value>
            <value>
                <fullName>LAM 30122 NORTHERN SUBURBS</fullName>
                <isActive>false</isActive>
                <label>LAM 30122 NORTHERN SUBURBS</label>
            </value>
            <value>
                <fullName>LAM 30211 Melb Outer North</fullName>
                <isActive>false</isActive>
                <label>LAM 30211 Melb Outer North</label>
            </value>
            <value>
                <fullName>LAM 30214 PENINSULA</fullName>
                <isActive>false</isActive>
                <label>LAM 30214 PENINSULA</label>
            </value>
            <value>
                <fullName>LAM 40106 Gold Coast</fullName>
                <isActive>false</isActive>
                <label>LAM 40106 Gold Coast</label>
            </value>
            <value>
                <fullName>LAM 40112 Far North Qld</fullName>
                <isActive>false</isActive>
                <label>LAM 40112 Far North Qld</label>
            </value>
            <value>
                <fullName>LAM 50103 Southern SA</fullName>
                <isActive>false</isActive>
                <label>LAM 50103 Southern SA</label>
            </value>
            <value>
                <fullName>LAM 60101 Perth Central</fullName>
                <isActive>false</isActive>
                <label>LAM 60101 Perth Central</label>
            </value>
            <value>
                <fullName>LAM 60102 Perth North</fullName>
                <isActive>false</isActive>
                <label>LAM 60102 Perth North</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>