force-app/main/default/objects/Account/fields/Categorisation__c.field-meta.xml
<CustomField>
    <fullName>Categorisation__c</fullName>
    <label>Categorisation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retail and sophisticated</fullName>
            </value>
            <value>
                <fullName>Retail and unsophisticated</fullName>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>Professional Opt Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>