force-app/main/default/objects/Account/fields/Categorisation_Date__c.field-meta.xml
<CustomField>
    <fullName>Categorisation_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Categorisation Date</label>
    <type>Date</type>
</CustomField>