force-app/main/default/objects/Account/fields/Categorisation_Expiration_Status__c.field-meta.xml
<CustomField>
    <fullName>Categorisation_Expiration_Status__c</fullName>
    <description>Used in report</description>
    <formula>IF( ISBLANK( Date_Customer_Notified_Of_Category__c ) &amp;&amp; NOT(ISBLANK(  Categorisation_Date__c )) , 
 IF( (TODAY() - Categorisation_Date__c  &gt; 150 &amp;&amp; TODAY() - Categorisation_Date__c &lt; 180), 
&quot;Will Expire in a Month &quot;, 
 IF(TODAY() - Categorisation_Date__c &gt; 180, 
&quot;Expired&quot;, 
&quot;Green&quot;) ) , 
&quot;Green&quot;)</formula>
    <label>Categorisation Expiration Status</label>
    <type>Text</type>
</CustomField>