force-app/main/default/objects/Account/fields/Categorisation_Status__c.field-meta.xml
<CustomField>
    <fullName>Categorisation_Status__c</fullName>
    <label>Categorisation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request for Categorisation</fullName>
            </value>
            <value>
                <fullName>Categorised</fullName>
            </value>
            <value>
                <fullName>Request for Re-categorisation</fullName>
            </value>
            <value>
                <fullName>Categorisation Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>