force-app/main/default/objects/Account/fields/ClientTier__c.field-meta.xml
<CustomField>
    <fullName>ClientTier__c</fullName>
    <label>Client Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>TBC</fullName>
            </value>
            <value>
                <fullName>DO NOT CALL</fullName>
                <isActive>false</isActive>
                <label>DO NOT CALL</label>
            </value>
            <value>
                <fullName>Digital</fullName>
                <isActive>false</isActive>
                <label>Digital</label>
            </value>
            <value>
                <fullName>Digital - Proactive</fullName>
                <isActive>false</isActive>
                <label>Digital - Proactive</label>
            </value>
            <value>
                <fullName>Digital - Reactive</fullName>
                <isActive>false</isActive>
                <label>Digital - Reactive</label>
            </value>
            <value>
                <fullName>Green Shoots</fullName>
                <isActive>false</isActive>
                <label>Green Shoots</label>
            </value>
            <value>
                <fullName>High Value but no SLA</fullName>
                <isActive>false</isActive>
                <label>High Value but no SLA</label>
            </value>
            <value>
                <fullName>Hypercare</fullName>
                <isActive>false</isActive>
                <label>Hypercare</label>
            </value>
            <value>
                <fullName>Migration-Unassigned</fullName>
                <isActive>false</isActive>
                <label>Migration-Unassigned</label>
            </value>
            <value>
                <fullName>Strategic</fullName>
                <isActive>false</isActive>
                <label>Strategic</label>
            </value>
            <value>
                <fullName>Subsidiary</fullName>
                <isActive>false</isActive>
                <label>Subsidiary</label>
            </value>
            <value>
                <fullName>Super Growth</fullName>
                <isActive>false</isActive>
                <label>Super Growth</label>
            </value>
            <value>
                <fullName>Target</fullName>
                <isActive>false</isActive>
                <label>Target</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>