force-app/main/default/objects/Account/fields/Commodity_Annual_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Commodity_Annual_Review_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Commodity Annual Review Date</label>
    <type>Date</type>
</CustomField>