force-app/main/default/objects/Account/fields/Commodity_Customer__c.field-meta.xml
<CustomField>
    <fullName>Commodity_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commodity Customer</label>
    <type>Checkbox</type>
</CustomField>