force-app/main/default/objects/Account/fields/Commodity_Manager__c.field-meta.xml
<CustomField>
    <fullName>Commodity_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commodity Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Commodity Manager)</relationshipLabel>
    <relationshipName>CommodityManagers</relationshipName>
    <type>Lookup</type>
</CustomField>