force-app/main/default/objects/Account/fields/Commodity_Pre_Deal_Checklist_Rating__c.field-meta.xml
<CustomField>
    <fullName>Commodity_Pre_Deal_Checklist_Rating__c</fullName>
    <formula>IF((Commodity_Annual_Review_Date__c  &lt;  TODAY() ||  Commodity_3_Month_Review_Date__c &lt; TODAY()), &quot;Commodity Annual Review Red&quot;, 
TEXT(Commodity_Pre_Deal_Checklist__r.Risk_Rating__c))</formula>
    <label>Commodity Pre Deal Checklist Rating</label>
    <type>Text</type>
</CustomField>