force-app/main/default/objects/Account/fields/Commodity_PreDeal_Call__c.field-meta.xml
<CustomField>
    <fullName>Commodity_PreDeal_Call__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Commodity PreDeal Call</label>
    <type>Date</type>
</CustomField>