force-app/main/default/objects/Account/fields/Commodity_Product_Authorised__c.field-meta.xml
<CustomField>
    <fullName>Commodity_Product_Authorised__c</fullName>
    <formula>Commodity_Pre_Deal_Checklist__r.Product_Authorised__c</formula>
    <label>Product Authorised</label>
    <type>Text</type>
</CustomField>