force-app/main/default/objects/Account/fields/Commodity_Sales_Margin__c.field-meta.xml
<CustomField>
    <fullName>Commodity_Sales_Margin__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Commodity Sales Margin</label>
    <length>50</length>
    <type>Text</type>
</CustomField>