force-app/main/default/objects/Account/fields/Commodity_Strategy_Paper_Issued__c.field-meta.xml
<CustomField>
    <fullName>Commodity_Strategy_Paper_Issued__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Commodity Strategy Paper Issued</label>
    <type>Date</type>
</CustomField>