force-app/main/default/objects/Account/fields/Customer_Banking_Centre__c.field-meta.xml
<CustomField>
    <fullName>Customer_Banking_Centre__c</fullName>
    <formula>IF(RM_Name__r.Con_Team__r.Name != Null, RM_Name__r.Con_Team__r.Name, Null)</formula>
    <label>Customer Banking Centre</label>
    <type>Text</type>
</CustomField>