force-app/main/default/objects/Account/fields/Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select an active contact.</errorMessage>
        <filterItems>
            <field>Contact.Contact_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Banker</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Customer Contact)</relationshipLabel>
    <relationshipName>CustomerContact</relationshipName>
    <type>Lookup</type>
</CustomField>