force-app/main/default/objects/Account/fields/Customer_Industry__c.field-meta.xml
<CustomField>
    <fullName>Customer_Industry__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Customer Industry</label>
    <length>30</length>
    <type>Text</type>
</CustomField>