force-app/main/default/objects/Account/fields/Date_Customer_Notified_Of_Category__c.field-meta.xml
<CustomField>
    <fullName>Date_Customer_Notified_Of_Category__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Customer Notified Of Category</label>
    <type>Date</type>
</CustomField>