force-app/main/default/objects/Account/fields/EEA__c.field-meta.xml
<CustomField>
    <fullName>EEA__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the registered office of the Company domiciled within the European Economic Area (EEA)?</inlineHelpText>
    <label>EEA</label>
    <type>Checkbox</type>
</CustomField>