force-app/main/default/objects/Account/fields/EMIR__c.field-meta.xml
<CustomField>
    <fullName>EMIR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EMIR</label>
    <type>Checkbox</type>
</CustomField>