force-app/main/default/objects/Account/fields/FCTMA__c.field-meta.xml
<CustomField>
    <fullName>FCTMA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FCTMA</label>
    <type>Checkbox</type>
</CustomField>