force-app/main/default/objects/Account/fields/FX_3_Month_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>FX_3_Month_Review_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FX 3 Month Review Date</label>
    <type>Date</type>
</CustomField>