force-app/main/default/objects/Account/fields/FX_Annual_Expired_Status__c.field-meta.xml
<CustomField>
    <fullName>FX_Annual_Expired_Status__c</fullName>
    <description>Used in Report</description>
    <formula>IF((( FX_Annual_Review_Date__c  - TODAY()) &lt; 30 &amp;&amp; (FX_Annual_Review_Date__c - TODAY()) &gt; 0),&quot;Will Expire in a Month&quot;,
IF(((FX_Annual_Review_Date__c - TODAY()) &lt; 0),
&quot;Expired&quot;,
&quot;Green&quot;)
)</formula>
    <label>FX Annual Expired Status</label>
    <type>Text</type>
</CustomField>