force-app/main/default/objects/Account/fields/FX_Annual_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>FX_Annual_Review_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FX Annual Review Date</label>
    <type>Date</type>
</CustomField>