force-app/main/default/objects/Account/fields/FX_Customer__c.field-meta.xml
<CustomField>
    <fullName>FX_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FX Customer</label>
    <type>Checkbox</type>
</CustomField>