force-app/main/default/objects/Account/fields/FX_Last_Dealt__c.field-meta.xml
<CustomField>
    <fullName>FX_Last_Dealt__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FX Last Dealt</label>
    <type>Date</type>
</CustomField>