force-app/main/default/objects/Account/fields/FX_Manager__c.field-meta.xml
<CustomField>
    <fullName>FX_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FX Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (FX Manager)</relationshipLabel>
    <relationshipName>FXManagers</relationshipName>
    <type>Lookup</type>
</CustomField>