force-app/main/default/objects/Account/fields/FX_Pre_Deal_Checklist__c.field-meta.xml
<CustomField>
    <fullName>FX_Pre_Deal_Checklist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FX Pre Deal Checklist</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 OR 3 OR 4)</booleanFilter>
        <errorMessage>Related FX Pre Deal Checklist does not match with the filter criteria.</errorMessage>
        <filterItems>
            <field>Checklist__c.Product__c</field>
            <operation>equals</operation>
            <value>FX</value>
        </filterItems>
        <filterItems>
            <field>Checklist__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Retail_Pre_Deal_Checklist</value>
        </filterItems>
        <filterItems>
            <field>Checklist__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Professional_Pre_Deal_Checklist</value>
        </filterItems>
        <filterItems>
            <field>Checklist__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Professional_Optout_Pre_Deal_Checklist</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Checklist__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>