force-app/main/default/objects/Account/fields/FX_Pre_Deal_Checklist_Rating__c.field-meta.xml
<CustomField>
    <fullName>FX_Pre_Deal_Checklist_Rating__c</fullName>
    <formula>IF((FX_Annual_Review_Date__c  &lt;  TODAY() ||  FX_3_Month_Review_Date__c &lt;TODAY()) , &quot;FX Annual Review Red&quot;, TEXT(FX_Pre_Deal_Checklist__r.Risk_Rating__c))</formula>
    <label>FX Pre Deal Checklist Rating</label>
    <type>Text</type>
</CustomField>