force-app/main/default/objects/Account/fields/FX_PreDeal_Call__c.field-meta.xml
<CustomField>
    <fullName>FX_PreDeal_Call__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FX PreDeal Call</label>
    <type>Date</type>
</CustomField>