force-app/main/default/objects/Account/fields/FX_Strategy_Paper_Issued__c.field-meta.xml
<CustomField>
    <fullName>FX_Strategy_Paper_Issued__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FX Strategy Paper Issued</label>
    <type>Date</type>
</CustomField>