force-app/main/default/objects/Account/fields/IRRM_3_Month_Expired_Status__c.field-meta.xml
<CustomField>
    <fullName>IRRM_3_Month_Expired_Status__c</fullName>
    <description>Used in Report</description>
    <formula>IF((( IRRM_3_Month_Review_Date__c  - TODAY()) &lt; 7 &amp;&amp; (IRRM_3_Month_Review_Date__c - TODAY()) &gt; 0),&quot;Will Expire in a Week&quot;,
IF(((IRRM_3_Month_Review_Date__c - TODAY()) &lt; 0),
&quot;Expired&quot;,
&quot;Green&quot;)
)</formula>
    <label>IRRM 3 Month Expired Status</label>
    <type>Text</type>
</CustomField>