force-app/main/default/objects/Account/fields/IRRM_Annual_Expired_Status__c.field-meta.xml
<CustomField>
    <fullName>IRRM_Annual_Expired_Status__c</fullName>
    <description>Used in report</description>
    <formula>IF(((  IRRM_Annual_Review_Date__c - TODAY()) &lt; 30 &amp;&amp; (IRRM_Annual_Review_Date__c - TODAY()) &gt; 0),&quot;Will Expire in a Month&quot;,
IF(((IRRM_Annual_Review_Date__c - TODAY()) &lt; 0),
&quot;Expired&quot;,
&quot;Green&quot;)
)</formula>
    <label>IRRM Annual Expired Status</label>
    <type>Text</type>
</CustomField>