force-app/main/default/objects/Account/fields/IRRM_Annual_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>IRRM_Annual_Review_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IRRM Annual Review Date</label>
    <type>Date</type>
</CustomField>