force-app/main/default/objects/Account/fields/IRRM_Customer__c.field-meta.xml
<CustomField>
    <fullName>IRRM_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IRRM Customer</label>
    <type>Checkbox</type>
</CustomField>