force-app/main/default/objects/Account/fields/IRRM_Manager__c.field-meta.xml
<CustomField>
    <fullName>IRRM_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IRRM Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (IRRM Manager)</relationshipLabel>
    <relationshipName>IRRMManagers</relationshipName>
    <type>Lookup</type>
</CustomField>