force-app/main/default/objects/Account/fields/IRRM_Pre_Deal_Checklist__c.field-meta.xml
<CustomField>
    <fullName>IRRM_Pre_Deal_Checklist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IRRM Pre Deal Checklist</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 OR 3 OR 4)</booleanFilter>
        <errorMessage>Related IRRM Pre Deal Checklist does not match with the filter criteria.</errorMessage>
        <filterItems>
            <field>Checklist__c.Product__c</field>
            <operation>equals</operation>
            <value>IRRM</value>
        </filterItems>
        <filterItems>
            <field>Checklist__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Retail_Pre_Deal_Checklist</value>
        </filterItems>
        <filterItems>
            <field>Checklist__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Professional_Pre_Deal_Checklist</value>
        </filterItems>
        <filterItems>
            <field>Checklist__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Professional_Optout_Pre_Deal_Checklist</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Checklist__c</referenceTo>
    <relationshipLabel>Accounts (IRRM Pre Deal Checklist)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>