force-app/main/default/objects/Account/fields/IRRM_Pre_Deal_Checklist_Rating__c.field-meta.xml
<CustomField>
    <fullName>IRRM_Pre_Deal_Checklist_Rating__c</fullName>
    <formula>IF( (IRRM_Annual_Review_Date__c &lt; TODAY() || IRRM_3_Month_Review_Date__c &lt; TODAY()) , &quot;IRRM Annual Review Red&quot;, 
TEXT(IRRM_Pre_Deal_Checklist__r.Risk_Rating__c))</formula>
    <label>IRRM Pre Deal Checklist Rating</label>
    <type>Text</type>
</CustomField>