force-app/main/default/objects/Account/fields/IRRM_PreDeal_Call__c.field-meta.xml
<CustomField>
    <fullName>IRRM_PreDeal_Call__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IRRM PreDeal Call</label>
    <type>Date</type>
</CustomField>